# Organizador-de-XML-por-CNPJ-

./: .gitignore  app.py  pyproject.toml  readme.mk  run.py
