[project]
name = "a"
version = "0.1.0"
description = "Organizador de XML por fornecedor , verificando se é entrada ou saída"
authors = [
    {name = "luiscarlosboninifilho2018@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "xlsxwriter (>=3.2.9,<4.0.0)",
    "streamlit (>=1.50.0,<2.0.0)",
    "pyinstaller (==6.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
